unit_tests/dq_2sm_mma/bug.txt
root@tjzj-inf-sci-k8s-bzz2-0203:/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma# python test_dq_2sm_mma.py 
CUDA Device: CF-NG-BZZ2-O
CUDA Capability: (10, 0)
[DBG][B0 CTA0 WG0] enter idx0..3=(37,121,46,147)
[DBG][B1 CTA1 WG0] enter idx0..3=(37,121,46,147)
[DBG][B1 CTA1 WG0] ds smem(0,0..3)=(1.132812,-0.632812,-0.914062,0.388672) gmem(row=64,0..3)=(1.132812,-0.632812,-0.914062,0.388672)
[DBG][B0 CTA0 WG0] ds smem(0,0..3)=(0.194336,2.156250,-0.171875,0.847656) gmem(row=0,0..3)=(0.194336,2.156250,-0.171875,0.847656)
[DBG][B0 CTA0 WG0] part0 k_smem(k0..3,col0)=(-0.667969,0.519531,-1.132812,0.341797) kv_ref(idx0..3,col0)=(-0.667969,0.519531,-1.132812,0.341797)
[DBG][B0 CTA0 WG0] part1 k_smem(k0..3,col0)=(0.326172,-0.902344,-0.839844,-1.539062) kv_ref(idx0..3,col256)=(0.326172,-0.902344,-0.839844,-1.539062)
[DBG][B0 CTA0 WG0] part2 k_smem(k0..3,col0)=(0.878906,0.251953,-2.343750,-0.466797) kv_ref(idx0..3,col512)=(0.878906,0.251953,0.498047,-0.178711)
Traceback (most recent call last):
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 83, in <module>
    raise SystemExit(main())
                     ^^^^^^
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 74, in main
    ok_rand = run_case("random", ds_rand, kv_rand, indices_rand)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 23, in run_case
    torch.cuda.synchronize()
  File "/usr/local/lib/python3.12/dist-packages/torch/cuda/__init__.py", line 1040, in synchronize
    return torch._C._cuda_synchronize()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: CUDA error: an illegal memory access was encountered
CUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.
For debugging consider passing CUDA_LAUNCH_BLOCKING=1
Compile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.